Fix scaling on narrow screens
Allow inputs to shrink responsively.

--- a/index.css
+++ b/index.css
@@ -22,3 +22,8 @@ h1 {
     text-align:center;
     margin: 0 auto;
 }
+@media (max-width: 400px){
+    input{
+        width:100%;
+    }
+}
